Update carbon.sh to dynamically adopt endorsed dir as per JDK version